# hat-peg

./: .buildinfo  CNAME  README.rst  index.html  objects.inv  peg.html  pyproject.toml  requirements.pip.runtime.txt  requirements.pip.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  peg.doctree
.github/workflows/: docs.yaml
_sources/: index.rst.txt
docs/: conf.py  peg.rst
py_api/: index.html  search.js
py_api/hat/: peg.html
src_doit/: __init__.py
src_py/hat/: peg.py
test_pytest/: test_peg.py
