[project]
name = "hat-peg"
version = "0.5.7"
description = "Hat PEG parser"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = ["hat-util ~= 0.6.10"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-peg.git"
Documentation = "http://hat-peg.hat-open.com"

[project.optional-dependencies]
dev = ["hat-doit ~=0.15.4"]

[build-system]
requires = ["hat-doit ~=0.15.4"]
build-backend = "hat.doit.pep517"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
